add default shader program settings

--- a/4.4/index.html
+++ b/4.4/index.html
@@ -7,7 +7,7 @@
     <!-- script for matrix calculation -->
     <script type="text/javascript" src="./glMatrix.js"></script>
   </head>
-  <body>
+  <body onload="startup()">
     <canvas id="myGLCanvas" width="500" height="500"></canvas>
 
     <!-- script for vertex shader -->
