add shader scripts and default webgl script including setupShader

--- a/2.1/index.html
+++ b/2.1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2.1 Draw a triangle with WebGL</title>
+    <title>Draw a triangle with WebGL</title>
   </head>
   <body onload="startup()">
     <canvas id="myGLCanvas" width="500" height="500"></canvas>
